@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          BUG FIX:  it is okay to replace the default logger, always
 
 2.003     2011-01-21 13:14:43 America/New_York
           add config_id to allow faking Global equality when testing
